# api-bank-fastapi

./: .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
api_bancaria_fastapi/: main.py  schemas.py
migrations/: env.py
migrations/versions/: 0347a42843ac_feat_transaction_number.py  042da96da72e_fix_password_field.py  06c9e241b568_transaction_number_is_true.py  3bc04ef34646_create_transactions_table.py  532249749a8d_create_accounts_table.py  56e40078ac56_corrigindo_campo_balance.py  68097fa18588_first_schema_after_clear.py  81c4b050e9b1_reestrutando_tabela_account.py  8408de46de9e_includes_updated_at_account_table.py  9beff71dcdd1_transaction_number_init_false.py  9dc38e74b746_incrementando_campos_em_account_table.py  d1a95b9809f9_transaction_number_default.py  ec8bf984750c_corrigindo_campo_balance_2.py
src/: database.py  main.py  security.py  settings.py
src/controllers/: account.py  auth.py  transaction.py
src/models/: __init__.py  account.py  transaction.py
src/schemas/: account.py  transaction.py
tests/: conftest.py  test_accounts.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_transactions.py
