[project]
name = "api-bancaria-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "guilhcarvalho",email = "guicarvalhosoares@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.15,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "coverage (>=7.14.1,<8.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx2 (>=2.4.0,<3.0.0)",
    "pytest-randomly (>=4.1.0,<5.0.0)",
    "pytest-random-order (>=1.2.0,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "freezegun (>=1.5.5,<2.0.0)"
]


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']


[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.pytest]
pythonpath = ['.']
addopts = ['-p', 'no:warnings', '--cov=src', '--cov-context=test', '--cov-branch', '--random-order']
asyncio_default_fixture_loop_scope = 'function'


[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev src/main.py'
pre_test = 'task lint'
test = 'pytest -s -x -vv --cov=src'
post_test = 'coverage html --show-contexts'


[tool.coverage.run]
concurrency = ["thread", "greenlet"]